[gd_scene load_steps=29 format=2]

[ext_resource path="res://camera/free_camera.gd" type="Script" id=1]
[ext_resource path="res://designer/designer.gd" type="Script" id=2]
[ext_resource path="res://designer/floor.gd" type="Script" id=3]
[ext_resource path="res://menu/theme/theme.tres" type="Theme" id=4]
[ext_resource path="res://designer/inventory.gd" type="Script" id=5]
[ext_resource path="res://designer/save_vehicle.gd" type="Script" id=6]
[ext_resource path="res://addons/crosshairs/image0018.png" type="Texture" id=7]
[ext_resource path="res://menu/good_times_rg.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://addons/arrow.png" type="Texture" id=10]
[ext_resource path="res://menu/main.tscn" type="PackedScene" id=11]
[ext_resource path="res://designer/map.tscn" type="PackedScene" id=12]
[ext_resource path="res://menu/dialog/independent_panel.tscn" type="PackedScene" id=13]
[ext_resource path="res://designer/load_vehicle.gd" type="Script" id=14]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
params_depth_draw_mode = 1
albedo_color = Color( 1, 1, 1, 0.392157 )

[sub_resource type="QuadMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 1, 0.00784314, 0.00784314, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.407843, 0.992157, 0.168627, 1 )

[sub_resource type="InputEventAction" id=5]
action = "ui_cancel"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 8 )

[sub_resource type="InputEventAction" id=8]
action = "ui_cancel"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "ui_accept"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventAction" id=12]
action = "ui_cancel"

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[sub_resource type="InputEventAction" id=14]
action = "ui_accept"

[sub_resource type="ShortCut" id=15]
shortcut = SubResource( 14 )

[node name="Designer" type="Node"]
script = ExtResource( 2 )
main_menu = ExtResource( 11 )
test_map = ExtResource( 12 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -3.25841e-07, -1.62921e-07, 0.866025, 0.5, 2.82187e-07, 0.5, -0.866025, -0.112284, 5.09171, -11.6802 )
script = ExtResource( 1 )
always_capture = true

[node name="MeshInstance" type="MeshInstance" parent="Camera"]
transform = Transform( 2.98872, -0.0583399, 2.65785, 1.28558, 3.53209, -1.36808, -2.32699, 1.87642, 2.65785, 2, -1, -2 )

[node name="Floor" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
axis = 1
script = ExtResource( 3 )

[node name="Origin" type="Spatial" parent="Floor"]

[node name="Ghost" type="MeshInstance" parent="Floor/Origin"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, -1 )
material_override = SubResource( 1 )

[node name="Arrow" type="Sprite3D" parent="Floor"]
transform = Transform( -1.62921e-07, -1, 0, -1.62921e-07, 2.65431e-14, -1, 1, -1.62921e-07, -1.62921e-07, 0, 0.002, 0 )
texture = ExtResource( 10 )

[node name="Mirror" type="MeshInstance" parent="Floor"]
transform = Transform( 0.5, 0, 0, 0, -3.25841e-07, 1, 0, -2, -1.62921e-07, 0, 0.001, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="BlockFaceHighlighter" type="Spatial" parent="."]

[node name="CSGBox" type="CSGBox" parent="BlockFaceHighlighter"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
width = 1.01
height = 1.01
depth = 0.1
material = SubResource( 4 )

[node name="CSGBox" type="CSGBox" parent="BlockFaceHighlighter/CSGBox"]
operation = 2
width = 0.75
height = 0.75
depth = 3.0

[node name="HUD" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD"]
margin_left = 928.0
margin_top = 508.0
margin_right = 992.0
margin_bottom = 572.0
texture = ExtResource( 7 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="GUI" instance=ExtResource( 13 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -190.0
margin_right = 160.0
margin_bottom = 190.0
title = "Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Menu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 305.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="GUI/Menu/VBoxContainer"]
margin_right = 265.0
margin_bottom = 41.6293
shortcut = SubResource( 6 )
text = "Continue"

[node name="Test" type="Button" parent="GUI/Menu/VBoxContainer"]
margin_top = 51.0
margin_right = 265.0
margin_bottom = 92.6293
text = "Test"

[node name="Save" type="Button" parent="GUI/Menu/VBoxContainer"]
margin_top = 102.0
margin_right = 265.0
margin_bottom = 143.629
text = "Save"

[node name="Load" type="Button" parent="GUI/Menu/VBoxContainer"]
margin_top = 153.0
margin_right = 265.0
margin_bottom = 194.629
text = "Load"

[node name="Settings" type="Button" parent="GUI/Menu/VBoxContainer"]
margin_top = 204.0
margin_right = 265.0
margin_bottom = 245.629
text = "Settings"

[node name="Exit" type="Button" parent="GUI/Menu/VBoxContainer"]
margin_top = 255.0
margin_right = 265.0
margin_bottom = 296.629
text = "Exit"

[node name="Inventory" parent="GUI" instance=ExtResource( 13 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
title = "Inventory"

[node name="Inventory" type="VBoxContainer" parent="GUI/Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
category_button_template = NodePath("../../Inventory/Inventory/HBoxContainer2/HBoxContainer/Categories/VBoxContainer/Template")
block_button_template = NodePath("../../Inventory/Inventory/HBoxContainer2/HBoxContainer/Blocks/GridContainer/Template")
preview_mesh = NodePath("../../Inventory/Inventory/HBoxContainer2/HBoxContainer2/ViewportContainer/Viewport/Camera/MeshInstance")

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/Inventory/Inventory"]
margin_right = 1760.0
margin_bottom = 920.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Inventory/Inventory/HBoxContainer2"]
margin_right = 878.0
margin_bottom = 920.0
size_flags_horizontal = 3

[node name="Categories" type="ScrollContainer" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer"]
margin_right = 150.0
margin_bottom = 920.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer/Categories"]
margin_right = 150.0
margin_bottom = 920.0
size_flags_vertical = 3

[node name="Template" type="Button" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer/Categories/VBoxContainer"]
margin_right = 150.0
margin_bottom = 41.6293
rect_min_size = Vector2( 150, 0 )
text = "Category"

[node name="Blocks" type="ScrollContainer" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 920.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer/Blocks"]
margin_right = 150.0
margin_bottom = 41.0
columns = 2

[node name="Template" type="Button" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer/Blocks/GridContainer"]
margin_right = 150.0
margin_bottom = 41.6293
rect_min_size = Vector2( 150, 0 )
text = "Block"

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/Inventory/Inventory/HBoxContainer2"]
margin_left = 882.0
margin_right = 1760.0
margin_bottom = 920.0
size_flags_horizontal = 3

[node name="ViewportContainer" type="ViewportContainer" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer2"]
margin_right = 878.0
margin_bottom = 920.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer2/ViewportContainer"]
size = Vector2( 878, 920 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer2/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42.9181, 16.5937, 0 )

[node name="MeshInstance" type="MeshInstance" parent="GUI/Inventory/Inventory/HBoxContainer2/HBoxContainer2/ViewportContainer/Viewport/Camera"]
transform = Transform( 2.71817, 0.145894, 2.93091, 1.28558, 3.53209, -1.36808, -2.63796, 1.87165, 2.35332, 0, 0, -2 )

[node name="SaveVehicle" parent="GUI" instance=ExtResource( 13 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -190.0
margin_right = 160.0
margin_bottom = 190.0
size_flags_vertical = 3
script = ExtResource( 6 )
title = "Save"

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/SaveVehicle"]
anchor_left = 0.125
anchor_top = 0.105
anchor_right = 0.953
anchor_bottom = 0.933
margin_top = 0.0999985
margin_right = 0.039978
margin_bottom = -0.540009
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="GUI/SaveVehicle/VBoxContainer"]
margin_right = 265.0
margin_bottom = 42.0
expand_to_text_length = true
placeholder_text = "Name"
caret_blink = true

[node name="Path" type="Label" parent="GUI/SaveVehicle/VBoxContainer"]
margin_top = 46.0
margin_right = 265.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 7 )
autowrap = true

[node name="PanelContainer" type="PanelContainer" parent="GUI/SaveVehicle/VBoxContainer"]
margin_top = 70.0
margin_right = 265.0
margin_bottom = 269.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/SaveVehicle/VBoxContainer/PanelContainer"]
margin_left = 16.0
margin_top = 11.0
margin_right = 249.0
margin_bottom = 188.0
scroll_horizontal_enabled = false

[node name="Files" type="VBoxContainer" parent="GUI/SaveVehicle/VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 233.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Template" type="Button" parent="GUI/SaveVehicle/VBoxContainer/PanelContainer/ScrollContainer/Files"]
margin_right = 233.0
margin_bottom = 41.6293
size_flags_horizontal = 3
text = "Vehicle name"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/SaveVehicle/VBoxContainer"]
margin_top = 273.0
margin_right = 265.0
margin_bottom = 314.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="GUI/SaveVehicle/VBoxContainer/HBoxContainer"]
margin_right = 130.0
margin_bottom = 41.6293
size_flags_horizontal = 3
shortcut = SubResource( 9 )
text = "Cancel"

[node name="Save" type="Button" parent="GUI/SaveVehicle/VBoxContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 265.0
margin_bottom = 41.6293
size_flags_horizontal = 3
shortcut = SubResource( 11 )
text = "Save"

[node name="LoadVehicle" parent="GUI" instance=ExtResource( 13 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -190.0
margin_right = 160.0
margin_bottom = 190.0
script = ExtResource( 14 )
title = "Load"

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/LoadVehicle"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="GUI/LoadVehicle/VBoxContainer"]
margin_right = 265.0
margin_bottom = 20.0

[node name="PanelContainer" type="PanelContainer" parent="GUI/LoadVehicle/VBoxContainer"]
margin_top = 24.0
margin_right = 265.0
margin_bottom = 280.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/LoadVehicle/VBoxContainer/PanelContainer"]
margin_left = 16.0
margin_top = 11.0
margin_right = 249.0
margin_bottom = 245.0
scroll_horizontal_enabled = false

[node name="Files" type="VBoxContainer" parent="GUI/LoadVehicle/VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 233.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Template" type="Button" parent="GUI/LoadVehicle/VBoxContainer/PanelContainer/ScrollContainer/Files"]
margin_right = 233.0
margin_bottom = 41.6293
size_flags_horizontal = 3
text = "Vehicle name"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/LoadVehicle/VBoxContainer"]
margin_top = 284.0
margin_right = 265.0
margin_bottom = 325.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="GUI/LoadVehicle/VBoxContainer/HBoxContainer"]
margin_right = 130.0
margin_bottom = 41.6293
size_flags_horizontal = 3
shortcut = SubResource( 13 )
text = "Cancel"

[node name="Load" type="Button" parent="GUI/LoadVehicle/VBoxContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 265.0
margin_bottom = 41.6293
size_flags_horizontal = 3
shortcut = SubResource( 15 )
text = "Load"
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Continue" to="." method="set_enabled" binds= [ true ]]
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Test" to="." method="_on_Test_pressed"]
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Save" to="GUI/Menu" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Save" to="GUI/SaveVehicle" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Load" to="GUI/Menu" method="set_visible" binds= [ false ]]
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Load" to="GUI/LoadVehicle" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="GUI/Menu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="hide" from="GUI/Inventory" to="." method="set_enabled" binds= [ true ]]
[connection signal="save_vehicle" from="GUI/SaveVehicle" to="." method="save_vehicle"]
[connection signal="pressed" from="GUI/SaveVehicle/VBoxContainer/HBoxContainer/Cancel" to="." method="set_enabled" binds= [ true ]]
[connection signal="pressed" from="GUI/SaveVehicle/VBoxContainer/HBoxContainer/Save" to="." method="set_enabled" binds= [ true ]]
[connection signal="pressed" from="GUI/SaveVehicle/VBoxContainer/HBoxContainer/Save" to="GUI/SaveVehicle" method="_on_Save_pressed"]
[connection signal="load_vehicle" from="GUI/LoadVehicle" to="." method="load_vehicle"]
[connection signal="load_vehicle" from="GUI/LoadVehicle" to="GUI/SaveVehicle" method="set_full_path"]
[connection signal="pressed" from="GUI/LoadVehicle/VBoxContainer/HBoxContainer/Cancel" to="." method="set_enabled" binds= [ true ]]
[connection signal="pressed" from="GUI/LoadVehicle/VBoxContainer/HBoxContainer/Load" to="." method="set_enabled" binds= [ true ]]
[connection signal="pressed" from="GUI/LoadVehicle/VBoxContainer/HBoxContainer/Load" to="GUI/LoadVehicle" method="_on_Load_pressed"]
